--- a/index.html
+++ b/index.html
@@ -1,107 +1,59 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
-	"http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN"
+ "http://www.w3.org/TR/html4/strict.dtd">
+<html>
 <head>
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-
-	<title>atbradley/atb_twitter @ GitHub</title>
-	
-	<style type="text/css">
-		body {
-  		margin-top: 1.0em;
-  		background-color: #b7edb6;
-		  font-family: "Helvetica,Arial,FreeSans";
-  		color: #000000;
-    }
-    #container {
-      margin: 0 auto;
-      width: 700px;
-    }
-		h1 { font-size: 3.8em; color: #481249; margin-bottom: 3px; }
-		h1 .small { font-size: 0.4em; }
-		h1 a { text-decoration: none }
-		h2 { font-size: 1.5em; color: #481249; }
-    h3 { text-align: center; color: #481249; }
-    a { color: #481249; }
-    .description { font-size: 1.2em; margin-bottom: 30px; margin-top: 30px; font-style: italic;}
-    .download { float: right; }
-		pre { background: #000; color: #fff; padding: 15px;}
-    hr { border: 0; width: 80%; border-bottom: 1px solid #aaa}
-    .footer { text-align:center; padding-top:30px; font-style: italic; }
-	</style>
-	
+   <title>atb_twitter</title>
+   <link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/2.7.0/build/reset-fonts-grids/reset-fonts-grids.css">
+   <link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/2.8.1/build/base/base-min.css">
+   <link rel="stylesheet" type="text/css" href="core.css">
 </head>
-
 <body>
-  <a href="http://github.com/atbradley/atb_twitter"><img style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub" /></a>
+<div id="doc3" class="yui-t7">
+   <div id="header" role="banner"><h1>atb_twitter</h1></div>
+   <div id="bd" role="main">
+	<div class="yui-gb">
+		 <div id="about" class="yui-u first">
+			 <h2>About</h2>
+			 <p>
+			   <code>atb_twitter</code> is a <a href="http://www.textpattern.com">Textpattern</a> plugin
+			   to display Twitter or StatusNet feeds on your website using Textpattern forms as display
+			   templates.
+			 </p>
+			 <p>
+			   Developed by <a href="http://www.adamtbradley.com/">Adam T. Bradley</a>.
+			 </p>
+		 </div>
+		 <div class="yui-u" id="example">
+			<h2>Example</h2>
+			<pre><code>&lt;txp:atb_twitter
+   count=&quot;20&quot;
+   user=&quot;daydreamlab&quot;&gt;
+&lt;ul class="tweets"&gt;
+&lt;li&gt;
 
-  <div id="container">
+&lt;span class=&quot;tweetdate&quot;&gt;
+   &lt;txp:atb_tw_created_at /&gt;:
+&lt;/span&gt; 
+&lt;txp:atb_tw_text /&gt;
 
-    <div class="download">
-      <a href="http://github.com/atbradley/atb_twitter/zipball/master">
-        <img border="0" width="90" src="http://github.com/images/modules/download/zip.png"></a>
-      <a href="http://github.com/atbradley/atb_twitter/tarball/master">
-        <img border="0" width="90" src="http://github.com/images/modules/download/tar.png"></a>
-    </div>
+&lt;/li&gt;
 
-    <h1><a href="http://github.com/atbradley/atb_twitter">atb_twitter</a>
-      <span class="small">by <a href="http://github.com/atbradley">atbradley</a></span></h1>
-
-    <div class="description">
-      Textpattern plugin to display Twitter or StatusNet feeds on your website
-    </div>
-
-    <p><pre><code>&lt;txp:atb_twitter count=&quot;20&quot; user=&quot;daydreamlab&quot;&gt;
-</code>
-<code>&lt;txp:atb_tw_if_first_tweet&gt;
-&lt;h2&gt;&lt;a href=&quot;http://twitter.com/daydreamlab&quot;&gt;&lt;txp:atb_tw_user_name /&gt; on Twitter&lt;/a&gt;&lt;/h2&gt;
-&lt;ul&gt;
-&lt;/txp:atb_tw_if_first_tweet&gt;
-</code>
-<code>&lt;li&gt;
-&lt;span class=&quot;tweetdate&quot;&gt;&lt;txp:atb_tw_created_at /&gt;:&lt;/span&gt; 
-&lt;br /&gt;&lt;txp:atb_tw_text /&gt;
-</code>
-<code>&lt;txp:atb_tw_if_is_reply&gt;
-&lt;br /&gt;
-&lt;a class=&quot;inreply&quot; href=&quot;http://twitter.com/&lt;txp:atb_tw_in_reply_to_user_id /&gt;/status/&lt;txp:atb_tw_in_reply_to_status_id /&gt;&quot;&gt;
-in reply to &lt;txp:atb_tw_in_reply_to_user_id /&gt;
-&lt;/a&gt;
-&lt;/txp:atb_tw_if_is_reply&gt;
-</code>
-<code>&lt;/li&gt;
-</code>
-<code>&lt;txp:atb_tw_if_last_tweet&gt;
+&lt;/txp:atb_twitter&gt;
 &lt;/ul&gt;
-&lt;/txp:atb_tw_if_last_tweet&gt;
-</code>
-<code>&lt;/txp:atb_twitter&gt;
-</code></pre></p><h2>Install</h2>
-<p>Simply cut-and-paste into the Textpattern plugin page, like any other Textpattern plugin.</p>
-<h2>Authors</h2>
-<p>Adam Bradley (hisself@adambradley.net)<br/><br/>      </p>
-<h2>Contact</h2>
-<p>Adam Bradley (hisself@adambradley.net)<br/>      </p>
-
-
-    <h2>Download</h2>
-    <p>
-      You can download this project in either
-      <a href="http://github.com/atbradley/atb_twitter/zipball/master">zip</a> or
-      <a href="http://github.com/atbradley/atb_twitter/tarball/master">tar</a> formats.
-    </p>
-    <p>You can also clone the project with <a href="http://git-scm.com">Git</a>
-      by running:
-      <pre>$ git clone git://github.com/atbradley/atb_twitter</pre>
-    </p>
-
-    <div class="footer">
-      get the source code on GitHub : <a href="http://github.com/atbradley/atb_twitter">atbradley/atb_twitter</a>
+			</code></pre>
+		 </div>
+		 <div id="downloads" class="yui-u">
+			<h2>Downloads</h2>
+			<ul>
+			   <li><a href="http://github.com/atbradley/atb_twitter/downloads">Downloads</a>
+				  (current stable version ready to install in Textpattern)</li>
+			   <li><a href="http://github.com/atbradley/atb_twitter/">Project on Github</a></li>
+			</ul> 
+		 </div>
     </div>
 
-  </div>
-
-  
+	</div>
+   <div id="ft" role="contentinfo"><p>Made with <a href="http://www.activestate.com/komodo-ide">Komodo</a> and coffee. Powered by <a href="http://www.github.com/">GitHub</a>.</p></div>
+</div>
 </body>
 </html>
